# cscli

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
include/: cscli_vti.h
lib/: Makefile.am  Makefile.in  thread.c  thread.h
test/: Makefile.am  Makefile.in  thread_dm.c
